fix: Add letter spacing to hopefully improve legibility
Readability hasn't been as good as I'd like it to be :(

--- a/themes/cat/sass/base/_reset.scss
+++ b/themes/cat/sass/base/_reset.scss
@@ -13,6 +13,7 @@
 }
 
 body {
+    letter-spacing: 1px;
     background-color: var(--bg);
     color: var(--fg);
     font-family: "SerenityOS Emoji", "Munro", monospace, sans-serif;
